# anki-flashcards

./: .env.example  .replit  DEPLOYMENT_SETUP.md  generate-session-secret.js  package-lock.json  package.json  process-sample-data.js  pyproject.toml  replit.md  sample-spanish-database.json
attached_assets/: Mundo_1754482023110.json  Pasted--id-1-pos-NOUN-word-lemma-detail-1754647868683_1754647868684.txt  Pasted--id-1-pos-TBD-word-Cultivo-lemma-cultivo-pos-1754594810063_1754594810064.txt  Pasted--inputText-Cultivo-una-rosa-blanca-nen-junio-como-enero-npara-el-amigo-sincero-nque-me-da--1754594828354_1754594828355.txt  Pasted--wordDatabase-1-word-Llamadme-pos-VERB-lemma-lla-1754504344052_1754504344053.txt  Pasted-Failed-to-load-resource-net-ERR-BLOCKED-BY-ADBLOCKER-events-launchdarkly-com-events-bulk-62b35a865-1754505210706_1754505210775.txt  anki_1754495056558.html  combined(1)_1754503825152.json  control-panel_1754441217360.html  list-view_1754433244573.html  page-view_1754435300359.html  process_llm_1754444680401.py  prompt_es_verify_1754441903972.txt  prompt_gr_1754441903973.txt  requirements_1754667954909.txt  test_1754666770795.py
client/public/: manifest.json
client/src/: App.tsx  index.css
client/src/components/: JsonFilesViewer.tsx  anki-flashcard-section.tsx  tooltip.tsx  (+9 more)
server/: ai-processor.py  emailService.ts  failed_batches_log.txt  process_llm.py  process_llm_full.py  replitAuth.ts  routes.ts  spacedRepetition.ts  storage.ts
server/prompts/: README.md  prompt_en.txt  prompt_es.txt  prompt_fr.txt  prompt_gr.txt
shared/: schema.ts
tmp/: nature.txt
(+19 files in other folders)
