[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "google-generativeai>=0.8.5",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "regex>=2025.7.34",
]
